Feature/dpo 2091 apien versiointi vanhan koodin poisto (#101)
* DPO-2370 getLastModified() palauttaa null
* DPO-2091 Apien versiointi - käyttämättömän koodin poisto